--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,7 @@ body {
   background-image: url('./img/bbackimg.jpg');
   background-size: cover; /* Ensure the image covers the entire screen */
   background-position: center; /* Center the image */
-  background-repeat: no-repeat;
-  color: #007bff; /* Prevent the image from repeating */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
 }
 
 .header {
