--- a/src/gym/Gym.css
+++ b/src/gym/Gym.css
@@ -152,7 +152,40 @@
   background-color: #d9801f; /* Darker orange on hover */
   transform: scale(1.05); /* Slight zoom effect on hover */
 }
+/* card and this container*/
+.mt-4-4 {
+  margin-top: 4rem;
+  background-color: #555;
+}
+.d-flex {
+  background-color: #333;
+  color: #ced4da;
+}
+.card-style-1, .card-style-2 ,.card-style-3{
+  background-color: #555;
+  color: #ced4da;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s ease-in-out;
+}
 
+.card-style-1:hover, .card-style-2:hover, .card-style-3:hover {
+}
+
+/* Overlay */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Success Message */
 .booking-form-1 .success-message {
   color: #28a745;
